--- a/src/application/MainScene.fxml
+++ b/src/application/MainScene.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="577.0" prefWidth="436.0" style="-fx-background-color: black; -fx-background-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainSceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="559.0" style="-fx-background-color: black; -fx-background-radius: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainSceneController">
    <children>
-      <VBox layoutX="13.0" layoutY="14.0" prefHeight="139.0" prefWidth="411.0" style="-fx-background-color: yellow; -fx-background-radius: 10;" AnchorPane.bottomAnchor="424.0">
+      <VBox layoutX="13.0" layoutY="14.0" prefHeight="139.0" prefWidth="525.0" style="-fx-background-color: yellow; -fx-background-radius: 10;" AnchorPane.bottomAnchor="468.0">
          <children>
             <Label prefHeight="25.0" prefWidth="402.0" text="Login:">
                <font>
@@ -38,19 +38,47 @@
             </Button>
          </children>
       </VBox>
-      <TextArea fx:id="mostrarOpcoes" layoutX="13.0" layoutY="199.0" prefHeight="151.0" prefWidth="411.0" style="-fx-background-radius: 10;" />
-      <TextArea fx:id="mostrarResultado" layoutX="13.0" layoutY="368.0" prefHeight="200.0" prefWidth="411.0" />
-      <Label fx:id="labelOpcao" layoutX="13.0" layoutY="160.0" prefHeight="15.0" prefWidth="411.0" style="-fx-background-color: yellow;" text="Opções">
+      <TextArea fx:id="mostrarResultado" layoutX="13.0" layoutY="407.0" prefHeight="200.0" prefWidth="525.0" />
+      <Label fx:id="labelOpcao" layoutX="13.0" layoutY="160.0" prefHeight="18.0" prefWidth="525.0" style="-fx-background-color: yellow;" text="Opções">
          <font>
             <Font name="Tahoma Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="13.0" layoutY="350.0" prefHeight="15.0" prefWidth="411.0" style="-fx-background-color: yellow;" text="Resultado">
+      <Label layoutX="13.0" layoutY="389.0" prefHeight="18.0" prefWidth="525.0" style="-fx-background-color: yellow;" text="Resultado">
          <font>
             <Font name="Tahoma Bold" size="14.0" />
          </font>
       </Label>
       <Label layoutX="14.0" layoutY="178.0" />
-      <TextField fx:id="tfTitle3" layoutX="13.0" layoutY="174.0" prefHeight="25.0" prefWidth="411.0" />
+      <TextField fx:id="tfTitle3" layoutX="13.0" layoutY="221.0" prefHeight="25.0" prefWidth="464.0" />
+      <Button layoutX="482.0" layoutY="221.0" mnemonicParsing="false" onAction="#btnEscolhaCliked" style="-fx-background-color: blue;" text="Escolha" textFill="WHITE" />
+      <VBox layoutX="13.0" layoutY="256.0" prefHeight="121.0" prefWidth="525.0" style="-fx-background-color: yellow;">
+         <children>
+            <Label prefHeight="25.0" prefWidth="402.0" text="Cadastrar novo usuário:">
+               <font>
+                  <Font name="Tahoma Bold" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="tfNewUser" prefHeight="18.0" prefWidth="402.0" />
+            <Label prefHeight="25.0" prefWidth="402.0" text="Cadastrar nova senha :">
+               <font>
+                  <Font name="Tahoma Bold" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="tfNewPassword" prefHeight="25.0" prefWidth="506.0" />
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#btnNewCadastroCliked" prefHeight="31.0" prefWidth="92.0" style="-fx-background-color: blue;" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Italic" size="15.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="150.0" top="5.0" />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
+      <TextArea fx:id="mostrarOpcoes" layoutX="13.0" layoutY="176.0" prefHeight="38.0" prefWidth="525.0" />
    </children>
 </AnchorPane>
